--- a/.env
+++ b/.env
@@ -1,13 +1,9 @@
-# إعدادات قاعدة البيانات
-DB_HOST=localhost
+# إعدادات قاعدة البيانات (اختياري)  
+DATABASE_URL=mysql://askar:Askar1984@127.0.0.1:3306/sports_booking
+
+
+ DB_HOST=localhost
 DB_PORT=3306
 DB_USERNAME=askar
 DB_PASSWORD=Askar1984
 DB_DATABASE=sports_booking
-
-# إعدادات بوت تلجرام
-TELEGRAM_BOT_TOKEN=7956984247:AAEUHz64JzZmErdK87OovAI9xtcgIg60C2U
-TELEGRAM_ADMIN_CHAT_ID=your_admin_chat_id
-
-# إعدادات واتساب (اختيارية للاختبار)
-WHATSAPP_TOKEN=your_whatsapp_token
